docs: Add a test for POST with TurboStreams
This also moves common classes out of the tests themselves.
And sorts out the layout in the tests, by adding indent=0 to the snippet tags.

Closes #681